added faq section , more efficient error handling in ui

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Compress MP4 Videos Online – Fast, Free & High-Quality | TinyMP4</title>
+    <title>Compress Files Online – Fast, Free & High-Quality | TinyCompression</title>
     <meta name="description" content="Compress MP4 videos online without losing quality. Fast, secure, and easy-to-use video compressor built for creators and professionals.">
   </head>
   <body>
