added razorpay test payments for pro model

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Compress MP4 videos online without losing quality. Fast, secure, and easy-to-use video compressor built for creators and professionals.">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <div id="root"></div>
   </body>
 </html>
